// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders if \`items\` is an array of objects 1`] = `
<div
  className="foo"
>
  <div>
    <div>
      <div>
        <div />
      </div>
    </div>
    <div>
      <div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders if \`items\` is an empty array 1`] = `
<div
  className="foo"
>
  <div />
</div>
`;
